Style socials icons hover

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -46,6 +46,9 @@
   --height-hero-large: 75vh;
   --height-item-project: 8rem;
 
+  --size-social-circle: 42px;
+  --size-social-circle-icon: 24px;
+
   /* type */
 
   --font-size-h1-logo: 4rem;
