Fix split with images top/bottom margins

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,7 +9,7 @@
             {{ end }}
 
             {{ if or .Params.info .Params.completed }}
-                <div class="split" style="grid-template-columns: 2fr 4fr">
+                <div class="split split--section" style="grid-template-columns: 2fr 4fr">
                     {{ $calloutText := markdownify .Params.info }}
                     {{ $duration := partial "fn/GetProjectDuration" (dict "start" .Params.started "end" .Params.completed) }}
 
