--- a/layouts/shortcodes/figure.html
+++ b/layouts/shortcodes/figure.html
@@ -4,6 +4,7 @@
             "src" .
             "title" ($.Get "title")
             "alt" ($.Get "alt")
+            "zoomable" ($.Get "zoomable")
             "outline" ($.Get "outline")
         ) }}
     </figure>
