--- a/static/css/index.css
+++ b/static/css/index.css
@@ -9,8 +9,9 @@
   /* color */
 
   --color-bg: #F5F3F0;
+  --color-bg-overlay: rgba(245, 243, 240, 0.95);
   --color-surface: #FFFFFF;
-  --color-overlay: rgba(0, 0, 0, 0.3);
+  --color-overlay: rgba(0, 0, 0, 0.25);
   --color-decoration: rgba(0, 0, 0, 0.1);
 
   --color-text-primary: rgba(0, 0, 0, 0.85);
