Fix split with images sometimes having huge empty space below

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -37,7 +37,7 @@
 
   --width-column-wide: 64rem;
   --width-column-narrow: calc(var(--width-column-wide) * 2/3); /* 4/6 */
-  --width-column-1: calc(var(--width-column-wide / 6)); /* 1/6 */
+  --width-column-1: calc(var(--width-column-wide) / 6); /* 1/6 */
   --width-mobile: 42rem;
 
   --height-header: 4rem;
