--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,30 +1,9 @@
 {{ define "main" }}
 
-    {{ partial "hero" . }}
-
-    <main class="column">
-        <article>
-            {{ if not .Params.hero }}
-                <h1>{{ .Title }}</h1>
-            {{ end }}
-
-            {{ if or .Params.info .Params.completed }}
-                <div class="split split--section" style="grid-template-columns: 2fr 4fr">
-                    {{ $calloutText := markdownify .Params.info }}
-                    {{ $duration := partial "fn/GetProjectDuration" (dict "start" .Params.started "end" .Params.completed) }}
-
-                    {{ with $duration }}
-                        {{ $calloutText = add . ". " $calloutText }}
-                    {{ end }}
-
-                    {{ partial "single/callout" (dict "text" $calloutText)}}
-
-                    <p>{{ .Params.summary }}</p>
-                </div>
-            {{ end }}
-
-            {{ .Content }}
-        </article>
-    </main>
+    {{ if .Params.project }}
+        {{ partial "single/single-project" . }}
+    {{ else }}
+        {{ partial "single/single-image" . }}
+    {{ end }}
 
 {{ end }}
