Hide nav tabs on mobile (temp)

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -17,7 +17,7 @@
         <nav class="header__nav">
             {{ range .Site.Sections }}
                 {{ if .RegularPagesRecursive }}
-                    {{ partial "header_tab" (dict "link" .RelPermalink "text" .LinkTitle "class" $class ) }}
+                    {{ partial "header_tab" (dict "link" .RelPermalink "text" .LinkTitle "class" (add $class " nav-tab--hidable") ) }}
                 {{ end }}
             {{ end }}
 
